Minor formatting fix attempt on calculator.css to fix display on iOS devices

--- a/calculator/css/calculator.css
+++ b/calculator/css/calculator.css
@@ -11,7 +11,7 @@
 }
 #calculator {
     padding-top: 20px;
-    width: 330px;
+    width: 334px;
     height: 100%;
     display: block;
     float: none;
